// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request-documents-view it enables date/time option and next button 1`] = `
<div>
  <h3
    class="lbh-heading-h3"
  >
    Suporting documents
  </h3>
  <p
    class="lbh-body-s"
  >
    The following documentation is required from the secure tenant and/or proposed tenant, as proof to support their application:
  </p>
  <ul
    class="lbh-list lbh-list--bullet"
  >
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Secure and Proposed tenant: Two forms of proof of identity for both the secure and proposed tenant. At least one each must be photographic ID
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: valid passport, driving licence, bank statement, utility bill
        )
      </span>
    </li>
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Proposed tenant: Proof of immigration status
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: passport, home office letter, embassy letter, immigration status document
        )
      </span>
    </li>
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Proposed tenant: Proof of relationship to the exisiting tenant
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: marriage or civil partner certificate
        )
      </span>
    </li>
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Proposed tenant: Proof of co-habitation: three documents proving 12 months residency at the property. If marriage certificate provided, any Proof of Address can be accepted.
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: letter, utility bill, council tax bill
        )
      </span>
    </li>
  </ul>
  <h3
    class="lbh-heading-h3"
  >
    Checking suporting documents
  </h3>
  <p
    class="lbh-body-s"
  >
    You must make an appointment with the tenant to check supporting documents in-person.
  </p>
  <p
    class="lbh-body-s"
  >
     contact details:
  </p>
  <p
    class="lbh-body-s"
  >
    Phone:
    <span
      style="margin-left: 1em;"
    >
      +44(0)7700 900251
    </span>
  </p>
  <p
    class="lbh-body-s"
  >
    Email:
    <span
      style="margin-left: 1em;"
    >
      testtest34335@gmail.com
    </span>
  </p>
  <form
    action="#"
    class="request-documents-form"
    id="request-documents-form"
    novalidate=""
  >
    <div
      class="govuk-radios lbh-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="requestType-automatic"
          name="requestType"
          type="radio"
          value="automatic"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="requestType-automatic"
        >
          Request documents electronically
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="requestType-manual"
          name="requestType"
          type="radio"
          value="manual"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="requestType-manual"
        >
          I have made an appointment to check supporting documents
        </label>
      </div>
    </div>
    <div
      style="display: flex;"
    >
      <fieldset
        class="govuk-form-group lbh-form-group mtfh-appointment-form__date"
        id="appointment-form-date"
      >
        <legend
          class="govuk-label lbh-label"
          for="appointment-form-date-field"
        >
          Date
          <sup
            aria-hidden="true"
          >
            *
          </sup>
        </legend>
        <div
          class="govuk-date-input lbh-date-input"
        >
          <div
            class="govuk-date-input__item"
          >
            <label
              class="govuk-label lbh-label"
              for="appointment-form-date-field-day"
            >
              Day
            </label>
            <input
              aria-label="Day"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuenow="1"
              aria-valuetext="01"
              class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
              name="day"
              placeholder="dd"
              required=""
              role="spinbutton"
              value="01"
            />
          </div>
          <div
            class="govuk-date-input__item"
          >
            <label
              class="govuk-label lbh-label"
              for="appointment-form-date-field-month"
            >
              Month
            </label>
            <input
              aria-label="Month"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="1"
              aria-valuetext="01"
              class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
              name="month"
              placeholder="mm"
              required=""
              role="spinbutton"
              value="01"
            />
          </div>
          <div
            class="govuk-date-input__item"
          >
            <label
              class="govuk-label lbh-label"
              for="appointment-form-date-field-year"
            >
              Year
            </label>
            <input
              aria-label="Year"
              aria-valuenow="2022"
              aria-valuetext="2022"
              class="govuk-input lbh-input govuk-input govuk-date-input__input govuk-input--width-4"
              name="year"
              placeholder="yyyy"
              required=""
              role="spinbutton"
              value="2022"
            />
          </div>
        </div>
      </fieldset>
      <fieldset
        class="govuk-form-group lbh-form-group mtfh-appointment-form__time"
        id="appointment-form-time"
        style="margin-top: 0px; margin-left: 5em;"
      >
        <legend
          class="govuk-label lbh-label"
          for="appointment-form-time-field"
        >
          Time
          <sup
            aria-hidden="true"
          >
            *
          </sup>
        </legend>
        <div
          class="govuk-date-input lbh-date-input"
        >
          <div
            class="govuk-date-input__item"
          >
            <label
              class="govuk-label lbh-label"
              for="appointment-form-time-field-hour"
            >
              Hour
            </label>
            <input
              aria-label="Hour"
              aria-valuemax="12"
              aria-valuemin="0"
              aria-valuenow="1"
              aria-valuetext="01"
              class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
              name="hour"
              placeholder="00"
              required=""
              role="spinbutton"
              value="01"
            />
          </div>
          <div
            class="govuk-date-input__item"
          >
            <label
              class="govuk-label lbh-label"
              for="appointment-form-time-field-minute"
            >
              Minute
            </label>
            <input
              aria-label="Minute"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="1"
              aria-valuetext="01"
              class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
              name="minute"
              placeholder="00"
              required=""
              role="spinbutton"
              value="01"
            />
          </div>
          <div
            class="govuk-date-input__item"
          >
            <label
              class="govuk-label lbh-label"
              for="appointment-form-time-field-amPm"
            >
              am/pm
            </label>
            <input
              aria-label="AM/PM"
              class="govuk-input lbh-input govuk-input--width-2"
              name="amPm"
              placeholder="am"
              value="AMam"
            />
          </div>
        </div>
      </fieldset>
    </div>
    <button
      class="govuk-button lbh-button"
      type="submit"
    >
      Next
    </button>
  </form>
</div>
`;

exports[`request-documents-view it renders RequestDocuments correctly on state BreachChecksPassed 1`] = `
<div>
  <h3
    class="lbh-heading-h3"
  >
    Suporting documents
  </h3>
  <p
    class="lbh-body-s"
  >
    The following documentation is required from the secure tenant and/or proposed tenant, as proof to support their application:
  </p>
  <ul
    class="lbh-list lbh-list--bullet"
  >
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Secure and Proposed tenant: Two forms of proof of identity for both the secure and proposed tenant. At least one each must be photographic ID
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: valid passport, driving licence, bank statement, utility bill
        )
      </span>
    </li>
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Proposed tenant: Proof of immigration status
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: passport, home office letter, embassy letter, immigration status document
        )
      </span>
    </li>
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Proposed tenant: Proof of relationship to the exisiting tenant
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: marriage or civil partner certificate
        )
      </span>
    </li>
    <li>
      <p
        class="lbh-body-s"
        style="font-weight: bold;"
      >
        Proposed tenant: Proof of co-habitation: three documents proving 12 months residency at the property. If marriage certificate provided, any Proof of Address can be accepted.
      </p>
      <span
        class="lbh-body-s"
      >
        (
        for example: letter, utility bill, council tax bill
        )
      </span>
    </li>
  </ul>
  <h3
    class="lbh-heading-h3"
  >
    Checking suporting documents
  </h3>
  <p
    class="lbh-body-s"
  >
    You must make an appointment with the tenant to check supporting documents in-person.
  </p>
  <p
    class="lbh-body-s"
  >
     contact details:
  </p>
  <p
    class="lbh-body-s"
  >
    Phone:
    <span
      style="margin-left: 1em;"
    >
      +44(0)7700 900251
    </span>
  </p>
  <p
    class="lbh-body-s"
  >
    Email:
    <span
      style="margin-left: 1em;"
    >
      testtest34335@gmail.com
    </span>
  </p>
  <form
    action="#"
    class="request-documents-form"
    id="request-documents-form"
    novalidate=""
  >
    <div
      class="govuk-radios lbh-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="requestType-automatic"
          name="requestType"
          type="radio"
          value="automatic"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="requestType-automatic"
        >
          Request documents electronically
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="requestType-manual"
          name="requestType"
          type="radio"
          value="manual"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="requestType-manual"
        >
          I have made an appointment to check supporting documents
        </label>
      </div>
    </div>
    <button
      class="govuk-button lbh-button"
      disabled=""
      type="submit"
    >
      Next
    </button>
  </form>
</div>
`;
